--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,6 +1,13 @@
 ---
 import Section from "@/components/Section.astro"
+import {basics} from "@/cv.json"
+
+const {summary} = basics
 ---
 <Section title="About">
-    
+    <p>{summary}</p>
 </Section>
+
+<style>
+    
+</style>
