--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,5 +1,99 @@
 ---
 import Section from "@/components/Section.astro";
+
+import { work } from "@/cv.json";
 ---
 
-<Section title="Experience" />
+<Section title="Experience">
+  <ul>
+    {
+      work.map(
+        ({ name, startDate, endDate, position, summary, highlights }) => {
+            const startYear = new Date(startDate).getFullYear();
+            const endYear = endDate != null ? new Date(endDate).getFullYear() :  "Present";
+            const years = `${startYear} - ${endYear}`;
+          return (
+            <li >
+                <article>
+                    <header>
+                        <div>
+                            <h3>{name}</h3>
+                            <h4>{position}</h4>
+                        </div>
+                        <time>
+                            <p>{years}</p>
+                            </time>
+                    </header>
+                    <footer>
+                        <p>{summary}</p>
+                        <div class="highlights">
+                            {
+                                highlights.map(
+                                    (highlight) => {
+                                        return (
+                                            <span>{highlight}</span>
+                                        )
+                                    }
+                                )
+                            }
+                          </div>
+                    </footer>
+                </article>
+            </li>
+          );
+        }
+      )
+    }
+  </ul>
+</Section>
+
+<style>
+    ul {
+       display: flex;
+       flex-direction: column;
+       gap:32px;
+    }
+    article h3 {
+        font-weight: 650;
+        color: #111
+    }
+
+    article h4 {
+        color: #222;
+        font-weight: 500;
+    }
+
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 4px;
+    }
+    time p {
+        color: #555
+        font-size: .85rem;
+        font-weight: 500;
+    }
+    .highlights {
+        display: flex;
+        flex-direction: column;
+        margin-top:8px;
+        gap: 8px;
+        
+    }
+    .highlights span {
+        flex-wrap: wrap;
+        border-radius: 6px;
+        max-width: fit-content;
+        background: #eee;
+        color: #444;
+        font-size: 0.8rem;
+        font-weight: 500;
+        padding: 0.2rem 0.6rem;
+    }
+    .highlights span:hover {
+  
+		background: #ddd;
+		transition: all 0.2s ease-in-out;
+    }
+</style>
