--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,6 +5,7 @@ import Mail from "@/icons/Mail.astro";
 import Phone from "@/icons/Phone.astro";
 import LinkedIn from "@/icons/LinkedIn.astro";
 import GitHub from "@/icons/GitHub.astro";
+import WorldMap from "@/icons/WorldMap.astro";
 
 const { name, label, image, location, profiles, phone, email } = basics;
 const { city, region, countryCode } = location;
@@ -13,23 +14,30 @@ const SOCIAL_ICONS: Record<string, any> = {
   LinkedIn,
   GitHub,
 };
+
+const linkedInfo = profiles.find(({ network }) => network === "LinkedIn")
+const linkedUrl = linkedInfo?.url
+const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
 ---
 
 <Section>
-  <div class="container">
+ <div class="container">
     <div class="info">
       <h1>{name}</h1>
       <h2>{label}</h2>
       <span>
-        <!-- Icono -->
-        {city}, {region}, {countryCode}
+        <WorldMap />
+        {city}, {region}
       </span>
-      <footer>
+      <footer class="print">
+        {printInfo}
+      </footer>
+      <footer class="no-print">
         {
           email && (
             <a
               href={`mailto:${email}`}
-              title={`Send email to ${name} at ${email}`}
+              title={`Enviar un correo electrónico a ${name} al correo ${email}`}
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -41,7 +49,7 @@ const SOCIAL_ICONS: Record<string, any> = {
           phone && (
             <a
               href={`tel:${phone}`}
-              title={`Call to ${name} at number ${email}`}
+              title={`Llamar por teléfono a ${name} al número ${phone}`}
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -50,19 +58,19 @@ const SOCIAL_ICONS: Record<string, any> = {
           )
         }
         {
-          profiles.map((profile) => {
-            const { network, url, username } = profile;
-            const Icon = SOCIAL_ICONS[network];
+          profiles.map(({ network, url, username }) => {
+            const Icon = SOCIAL_ICONS[network]
+
             return (
               <a
                 href={url}
-                title={`Go to ${username}'s ${network} profile`}
+                title={`Visitar el perfil de ${name} en ${network}`}
                 target="_blank"
                 rel="noopener noreferrer"
               >
                 <Icon />
               </a>
-            );
+            )
           })
         }
       </footer>
@@ -80,6 +88,12 @@ const SOCIAL_ICONS: Record<string, any> = {
     align-items: center;
     gap: 1rem;
   }
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding-right: 25px;
+  }
   h1 {
     font-size: 2rem;
   }
@@ -94,6 +108,46 @@ const SOCIAL_ICONS: Record<string, any> = {
     aspect-ratio: 1/1;
     object-fit: cover;
     width: 128px;
-    border-radius: 6px;
+    border-radius: 16px;
   }
+
+  span {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    color: #666;
+    font-size: 0.85rem;
+    letter-spacing: -0.05rem;
+
+  }
+
+  footer {
+  color: #555;
+    font-size: 0.65rem;
+    display: flex;
+    gap: 4px;
+    margin-top: 8px;
+    
+  }
+
+  footer a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      color: #666;
+      border: 1px solid #eee;
+      padding: 4px;
+      height: 32px;
+      width: 32px;
+      margin-right: ;
+      border-radius: 6px;
+      transition: all .3s ease;
+      &:hover {
+        color: #000;
+        background-color: #ddd;
+      }
+    }
+
+  
+
 </style>
