--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,11 +47,35 @@ const { title } = Astro.props;
 		margin: 0;
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
-	p{
-		color:#888;
-		font-size: .8rem;
-		line-height:1.5;
-		margin:0;
-		text-wrap: pretty;
-	}
+	 p {
+    color: #666;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    margin: 0;
+    text-wrap: pretty;
+  }
+
+  .print {
+    display: none !important;
+  }
+
+  @media print {
+    .no-print {
+      display: none !important;
+    }
+
+    .print {
+      display: block !important;
+    }
+
+    astro-dev-toolbar {
+      display: none !important;
+    }
+
+    article {
+      break-inside: avoid;
+    }
+  }
+
+	
 </style>
